[package]
name = "sy-commons"
version.workspace = true
edition.workspace = true
description = "Common utilities and patterns for Symphony crates"
license.workspace = true
repository.workspace = true
keywords = ["symphony", "commons", "utilities", "error-handling"]
categories = ["development-tools"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
debug = []  # Enable duck debugging in debug builds