[package]
name = "sy-commons"
version.workspace = true
edition.workspace = true
description = "Common utilities and patterns for Symphony crates"
license.workspace = true
repository.workspace = true
keywords = ["symphony", "commons", "utilities", "error-handling"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
# Error handling
thiserror.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }

# Filesystem
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }
directories = "5.0"

# Validation
regex = "1.0"

# JSON serialization
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
rstest = "0.18"
tokio-test = "0.4"
serial_test = "3.0"

[features]
default = []
unit = []
integration = []
slow = []

[[bench]]
name = "prevalidation_bench"
harness = false