[package]
name = "sy-commons"
version.workspace = true
edition.workspace = true
description = "Common utilities and patterns for Symphony crates"
license.workspace = true
repository.workspace = true
keywords = ["symphony", "commons", "utilities", "error-handling"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

# Configuration
figment.workspace = true
serde.workspace = true

# Filesystem
tokio.workspace = true
directories.workspace = true

# Validation
regex.workspace = true

# JSON serialization
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true
rstest.workspace = true
tokio-test.workspace = true
serial_test.workspace = true

[features]
default = []
unit = []
integration = []
slow = []

[[bench]]
name = "prevalidation_bench"
harness = false